osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_call_kwargs/test_validate_unknown_function.txt
error: unknown function: `Bar`
--> main.sml:1:6
     |
   1 | Foo = Bar()
     |       ^ called here
